--- a/classbig_1_1gui_1_1_status_bar.html
+++ b/classbig_1_1gui_1_1_status_bar.html
@@ -65,7 +65,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
     <ul class="tablist">
       <li><a href="annotated.html"><span>Class&#160;List</span></a></li>
       <li><a href="classes.html"><span>Class&#160;Index</span></a></li>
-      <li><a href="inherits.html"><span>Class&#160;Hierarchy</span></a></li>
+      <li><a href="hierarchy.html"><span>Class&#160;Hierarchy</span></a></li>
       <li><a href="functions.html"><span>Class&#160;Members</span></a></li>
     </ul>
   </div>
@@ -99,17 +99,11 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="dynheader">
 Inheritance diagram for big::gui::StatusBar:</div>
 <div class="dyncontent">
-<div class="center"><img src="classbig_1_1gui_1_1_status_bar__inherit__graph.png" border="0" usemap="#big_1_1gui_1_1_status_bar_inherit__map" alt="Inheritance graph"/></div>
-<map name="big_1_1gui_1_1_status_bar_inherit__map" id="big_1_1gui_1_1_status_bar_inherit__map">
+ <div class="center">
+  <img src="classbig_1_1gui_1_1_status_bar.png" usemap="#big::gui::StatusBar_map" alt=""/>
+  <map id="big::gui::StatusBar_map" name="big::gui::StatusBar_map">
 </map>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
-<div class="dynheader">
-Collaboration diagram for big::gui::StatusBar:</div>
-<div class="dyncontent">
-<div class="center"><img src="classbig_1_1gui_1_1_status_bar__coll__graph.png" border="0" usemap="#big_1_1gui_1_1_status_bar_coll__map" alt="Collaboration graph"/></div>
-<map name="big_1_1gui_1_1_status_bar_coll__map" id="big_1_1gui_1_1_status_bar_coll__map">
-</map>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
+ </div></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-methods"></a>
 Public Member Functions</h2></td></tr>
