--- a/classbig_1_1core_1_1_abstract_region_reader.html
+++ b/classbig_1_1core_1_1_abstract_region_reader.html
@@ -65,7 +65,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
     <ul class="tablist">
       <li><a href="annotated.html"><span>Class&#160;List</span></a></li>
       <li><a href="classes.html"><span>Class&#160;Index</span></a></li>
-      <li><a href="inherits.html"><span>Class&#160;Hierarchy</span></a></li>
+      <li><a href="hierarchy.html"><span>Class&#160;Hierarchy</span></a></li>
       <li><a href="functions.html"><span>Class&#160;Members</span></a></li>
     </ul>
   </div>
@@ -105,10 +105,12 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="dynheader">
 Inheritance diagram for big::core::AbstractRegionReader:</div>
 <div class="dyncontent">
-<div class="center"><img src="classbig_1_1core_1_1_abstract_region_reader__inherit__graph.png" border="0" usemap="#big_1_1core_1_1_abstract_region_reader_inherit__map" alt="Inheritance graph"/></div>
-<map name="big_1_1core_1_1_abstract_region_reader_inherit__map" id="big_1_1core_1_1_abstract_region_reader_inherit__map">
+ <div class="center">
+  <img src="classbig_1_1core_1_1_abstract_region_reader.png" usemap="#big::core::AbstractRegionReader_map" alt=""/>
+  <map id="big::core::AbstractRegionReader_map" name="big::core::AbstractRegionReader_map">
+<area href="classbig_1_1core_1_1_cytoband_reader.html" title="Region reader for Cytoband file. " alt="big::core::CytobandReader" shape="rect" coords="0,56,194,80"/>
 </map>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
+ </div></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-methods"></a>
 Public Member Functions</h2></td></tr>
