--- a/inherits.html
+++ b/inherits.html
@@ -92,45 +92,69 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="textblock">
 <p><a href="hierarchy.html">Go to the textual class hierarchy</a></p>
 </div><table border="0" cellspacing="10" cellpadding="0">
-<tr><td><img src="inherit_graph_0.png" border="0" alt="" usemap="#big_1_1core_1_1_abstract_region_reader"/>
+<tr><td><img src="inherit_graph_0.png" border="0" alt="" usemap="#big_1_1core_1_1_abstract_data_model"/>
+<map name="big_1_1core_1_1_abstract_data_model" id="big_1_1core_1_1_abstract_data_model">
+<area shape="rect" id="node2" href="classbig_1_1core_1_1_abstract_data_model.html" title="big::core::AbstractDataModel" alt="" coords="124,5,316,32"/><area shape="rect" id="node3" href="classbig_1_1gui_1_1_app.html" title="Singleton class containing database path acccessor and settings of the application. " alt="" coords="173,56,267,83"/><area shape="rect" id="node4" href="classbig_1_1gui_1_1_selection_router.html" title="route for selectable component contains QObject with setSelection(const Region&amp; region) as SLOT and s..." alt="" coords="137,107,303,133"/></map>
+</td></tr>
+<tr><td><img src="inherit_graph_1.png" border="0" alt="" usemap="#big_1_1core_1_1_abstract_region_reader"/>
 <map name="big_1_1core_1_1_abstract_region_reader" id="big_1_1core_1_1_abstract_region_reader">
-</map>
+<area shape="rect" id="node1" href="classbig_1_1core_1_1_abstract_region_reader.html" title="Base class of all file Region Reader. " alt="" coords="5,99,176,141"/><area shape="rect" id="node2" href="classbig_1_1core_1_1_abstract_text_region_reader.html" title="big::core::AbstractTextRegion\lReader" alt="" coords="224,99,420,141"/><area shape="rect" id="node3" href="classbig_1_1core_1_1_bed_graph_reader.html" title="big::core::BedGraphReader" alt="" coords="468,5,648,32"/><area shape="rect" id="node4" href="classbig_1_1core_1_1_bed_reader.html" title="big::core::BedReader" alt="" coords="485,56,631,83"/><area shape="rect" id="node5" href="classbig_1_1core_1_1_cytoband_reader.html" title="Region reader for Cytoband file. " alt="" coords="469,107,647,133"/><area shape="rect" id="node6" href="classbig_1_1core_1_1_gff_reader.html" title="big::core::GffReader" alt="" coords="488,157,628,184"/><area shape="rect" id="node7" href="classbig_1_1core_1_1_vcf_reader.html" title="big::core::VcfReader" alt="" coords="487,208,629,235"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_1.png" border="0" alt="" usemap="#big_1_1core_1_1_app"/>
-<map name="big_1_1core_1_1_app" id="big_1_1core_1_1_app">
-</map>
+<tr><td><img src="inherit_graph_2.png" border="0" alt="" usemap="#big_1_1core_1_1_alphabet"/>
+<map name="big_1_1core_1_1_alphabet" id="big_1_1core_1_1_alphabet">
+<area shape="rect" id="node1" href="classbig_1_1core_1_1_alphabet.html" title="big::core::Alphabet" alt="" coords="5,31,136,57"/><area shape="rect" id="node2" href="classbig_1_1core_1_1_nucleotid_alphabet.html" title="static class to get base name and get complement " alt="" coords="184,5,371,32"/><area shape="rect" id="node3" href="classbig_1_1core_1_1_protein_alphabet.html" title="static class to get aminoAcid name and translation from codon " alt="" coords="191,56,363,83"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_2.png" border="0" alt="" usemap="#big_1_1core_1_1_genom"/>
+<tr><td><img src="inherit_graph_3.png" border="0" alt="" usemap="#big_1_1core_1_1_genom"/>
 <map name="big_1_1core_1_1_genom" id="big_1_1core_1_1_genom">
-</map>
+<area shape="rect" id="node1" href="classbig_1_1core_1_1_genom.html" title="Describe a genom. " alt="" coords="5,5,128,32"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_3.png" border="0" alt="" usemap="#big_1_1core_1_1_region"/>
+<tr><td><img src="inherit_graph_4.png" border="0" alt="" usemap="#big_1_1core_1_1_region"/>
 <map name="big_1_1core_1_1_region" id="big_1_1core_1_1_region">
-</map>
+<area shape="rect" id="node1" href="classbig_1_1core_1_1_region.html" title="Describe a region of dna delimited by chromosom:pos&#45;length. " alt="" coords="5,5,127,32"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_4.png" border="0" alt="" usemap="#big_1_1core_1_1_region_list"/>
+<tr><td><img src="inherit_graph_5.png" border="0" alt="" usemap="#big_1_1core_1_1_region_list"/>
 <map name="big_1_1core_1_1_region_list" id="big_1_1core_1_1_region_list">
-</map>
+<area shape="rect" id="node2" href="classbig_1_1core_1_1_region_list.html" title="List of Region. " alt="" coords="107,5,249,32"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_5.png" border="0" alt="" usemap="#big_1_1core_1_1_sequence"/>
+<tr><td><img src="inherit_graph_6.png" border="0" alt="" usemap="#big_1_1core_1_1_sequence"/>
 <map name="big_1_1core_1_1_sequence" id="big_1_1core_1_1_sequence">
-</map>
+<area shape="rect" id="node1" href="classbig_1_1core_1_1_sequence.html" title="DNA/RNA/Protein sequence. " alt="" coords="5,5,144,32"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_6.png" border="0" alt="" usemap="#big_1_1gui_1_1_chromosom_widget"/>
-<map name="big_1_1gui_1_1_chromosom_widget" id="big_1_1gui_1_1_chromosom_widget">
-</map>
+<tr><td><img src="inherit_graph_7.png" border="0" alt="" usemap="#big_1_1gui_1_1_abstract_settings_widget"/>
+<map name="big_1_1gui_1_1_abstract_settings_widget" id="big_1_1gui_1_1_abstract_settings_widget">
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_abstract_settings_widget.html" title="big::gui::AbstractSettings\lWidget" alt="" coords="134,64,303,105"/><area shape="rect" id="node6" href="classbig_1_1gui_1_1_chromosom_widget.html" title="big::gui::ChromosomWidget" alt="" coords="127,130,311,157"/><area shape="rect" id="node3" href="classbig_1_1gui_1_1_chromosom_settings_widget.html" title="big::gui::ChromosomSettings\lWidget" alt="" coords="365,5,555,47"/><area shape="rect" id="node4" href="classbig_1_1gui_1_1_genom_settings_widget.html" title="big::gui::GenomSettingsWidget" alt="" coords="359,71,561,98"/><area shape="rect" id="node5" href="classbig_1_1gui_1_1_path_settings_widget.html" title="big::gui::PathSettingsWidget" alt="" coords="366,122,554,149"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_7.png" border="0" alt="" usemap="#big_1_1gui_1_1_main_tool_bar"/>
-<map name="big_1_1gui_1_1_main_tool_bar" id="big_1_1gui_1_1_main_tool_bar">
-</map>
+<tr><td><img src="inherit_graph_8.png" border="0" alt="" usemap="#big_1_1gui_1_1_abstract_track"/>
+<map name="big_1_1gui_1_1_abstract_track" id="big_1_1gui_1_1_abstract_track">
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_abstract_track.html" title="The AbstractTrack class Base class for all track. " alt="" coords="176,56,331,83"/><area shape="rect" id="node3" href="classbig_1_1gui_1_1_async_track.html" title="big::gui::AsyncTrack" alt="" coords="389,5,531,32"/><area shape="rect" id="node4" href="classbig_1_1gui_1_1_ruler_track.html" title="big::gui::RulerTrack" alt="" coords="392,56,528,83"/><area shape="rect" id="node5" href="classbig_1_1gui_1_1_sequence_track.html" title="big::gui::SequenceTrack" alt="" coords="379,107,541,133"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" alt="" usemap="#big_1_1gui_1_1_main_window"/>
+<tr><td><img src="inherit_graph_9.png" border="0" alt="" usemap="#big_1_1gui_1_1_genom_item"/>
+<map name="big_1_1gui_1_1_genom_item" id="big_1_1gui_1_1_genom_item">
+<area shape="rect" id="node1" href="structbig_1_1gui_1_1_genom_item.html" title="big::gui::GenomItem" alt="" coords="5,5,145,32"/></map>
+</td></tr>
+<tr><td><img src="inherit_graph_10.png" border="0" alt="" usemap="#big_1_1gui_1_1_genom_model"/>
+<map name="big_1_1gui_1_1_genom_model" id="big_1_1gui_1_1_genom_model">
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_genom_model.html" title="big::gui::GenomModel" alt="" coords="201,5,351,32"/></map>
+</td></tr>
+<tr><td><img src="inherit_graph_11.png" border="0" alt="" usemap="#big_1_1gui_1_1_main_window"/>
 <map name="big_1_1gui_1_1_main_window" id="big_1_1gui_1_1_main_window">
-</map>
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_main_window.html" title="Main application window. " alt="" coords="160,5,307,32"/></map>
 </td></tr>
-<tr><td><img src="inherit_graph_9.png" border="0" alt="" usemap="#big_1_1gui_1_1_status_bar"/>
+<tr><td><img src="inherit_graph_12.png" border="0" alt="" usemap="#big_1_1gui_1_1_select_tool_bar"/>
+<map name="big_1_1gui_1_1_select_tool_bar" id="big_1_1gui_1_1_select_tool_bar">
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_select_tool_bar.html" title="big::gui::SelectToolBar" alt="" coords="131,5,285,32"/></map>
+</td></tr>
+<tr><td><img src="inherit_graph_13.png" border="0" alt="" usemap="#big_1_1gui_1_1_settings_dialog"/>
+<map name="big_1_1gui_1_1_settings_dialog" id="big_1_1gui_1_1_settings_dialog">
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_settings_dialog.html" title="big::gui::SettingsDialog" alt="" coords="123,5,280,32"/></map>
+</td></tr>
+<tr><td><img src="inherit_graph_14.png" border="0" alt="" usemap="#big_1_1gui_1_1_status_bar"/>
 <map name="big_1_1gui_1_1_status_bar" id="big_1_1gui_1_1_status_bar">
-</map>
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_status_bar.html" title="big::gui::StatusBar" alt="" coords="123,5,253,32"/></map>
+</td></tr>
+<tr><td><img src="inherit_graph_15.png" border="0" alt="" usemap="#big_1_1gui_1_1_tracks_widget"/>
+<map name="big_1_1gui_1_1_tracks_widget" id="big_1_1gui_1_1_tracks_widget">
+<area shape="rect" id="node2" href="classbig_1_1gui_1_1_tracks_widget.html" title="The TracksWidget class Contains a list of track. " alt="" coords="167,5,320,32"/></map>
 </td></tr>
 </table>
 </div><!-- contents -->
