--- a/dir_68267d1309a1af8e8297ef4c3efbcdba.html
+++ b/dir_68267d1309a1af8e8297ef4c3efbcdba.html
@@ -85,6 +85,13 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="title">src Directory Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
+<div class="dynheader">
+Directory dependency graph for src:</div>
+<div class="dyncontent">
+<div class="center"><img src="dir_68267d1309a1af8e8297ef4c3efbcdba_dep.png" border="0" usemap="#dir__68267d1309a1af8e8297ef4c3efbcdba__dep" alt="src"/></div>
+<map name="dir__68267d1309a1af8e8297ef4c3efbcdba__dep" id="dir__68267d1309a1af8e8297ef4c3efbcdba__dep">
+<area shape="rect" id="node2" href="dir_aebb8dcc11953d78e620bbef0b9e2183.html" title="core" alt="" coords="123,27,195,75"/><area shape="rect" id="node3" href="dir_99d0482cf009f9d97a0877749b817f19.html" title="gui" alt="" coords="27,27,99,75"/><area shape="rect" id="clust1" href="dir_68267d1309a1af8e8297ef4c3efbcdba.html" alt="" coords="16,16,301,85"/></map>
+</div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="subdirs"></a>
 Directories</h2></td></tr>
